--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -15,10 +15,11 @@ jobs:
         
       - name: Download Clone
         run: |
-          DOWNLOAD_URL=$(curl -s https://api.github.com/repos/ProtoSoftware/clone/releases/latest \ 
+          DOWNLOAD_URL=$(curl -s https://api.github.com/repos/ProtoSoftware/clone/releases/latest \
           | grep browser_download_url \
           | grep linux_x86_64 \
-          | cut -d '"' -f 4) curl -s -L --create-dirs -o ~/clone "$DOWNLOAD_URL"
+          | cut -d '"' -f 4)
+          curl -s -L --create-dirs -o ~/clone "$DOWNLOAD_URL"
 
   
       - name: Make Bin Executable
