--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -19,7 +19,7 @@ jobs:
           | grep browser_download_url \
           | grep linux_x86_64 \
           | cut -d '"' -f 4)
-          curl -s -L --create-dirs -o ~/clone "$DOWNLOAD_URL"
+          curl -s -L --create-dirs -o ./clone "$DOWNLOAD_URL"
 
   
       - name: Make Bin Executable
